# rl_train_deploy

./: README.md
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/: CMakeLists.txt  CMakeLists_webots.txt  Doxyfile  README.md  absAngle.json  abs_run.py  autobuild.sh  autoclean.sh  plotdata.m  plotnlp.m  setmotorzeropos.py
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/MPC_Gait/include/: GaitGenerator.h  XFsmMgr.h  XFsmState.h  state.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/MPC_Gait/src/: GaitGenerator.cpp  XFsmMgr.cpp  XFsmState.cpp  state.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/MotorList/include/: MotorList.h  frictionnlpfunction.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/MotorList/sources/: motorlist.json  motorlist_sonnyv4.json
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/MotorList/src/: MotorList.cpp  frictionnlpfunction.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/NlpModel/include/: NlpModel.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/NlpModel/src/: NlpModel.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/PythonModule/include/: pythoncall.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/PythonModule/source/student/: policy_1500_stand.pt  policy_5700_feet_high.pt
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/PythonModule/src/: pythoncall.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/RobotController/include/: DataPackage.h  Estimation_Operator.h  KalmanFilter.h  LowPassFilter.h  Robot_Constructor.h  Robot_Controller.h  Robot_Data.h  Sensor.h  Task.h  basicfunction.h  controller_lib.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/RobotController/src/: DataPackage.cpp  Estimation_Operator.cpp  KalmanFilter.cpp  LowPassFilter.cpp  Robot_Constructor.cpp  Robot_Controller.cpp  Robot_Data.cpp  Sensor.cpp  Task.cpp  basicfunction.cpp  controller_lib.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/S2P/include/: functionIKID_S2P.h  myNeuralNetworkFunction.h  myNeuralNetworkFunctionRight.h  rtwtypes.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/S2P/src/: functionIKID_S2P.cpp  myNeuralNetworkFunction.cpp  myNeuralNetworkFunctionRight.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/StateEstimator/include/: AccKalmanFilter.h  LeggedKalmanFilter.h  StateEstimate.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/StateEstimator/src/: AccKalmanFilter.cpp  LeggedKalmanFilter.cpp  StateEstimate.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/WalkPlan/include/: aeroWalkPlan.h  gaitPlan.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/WalkPlan/src/: aeroWalkPlan.cpp  gaitPlan.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/WebotsInterface/: webotsInterface.txt
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/WebotsInterface/include/: webotsInterface.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/WebotsInterface/src/: webotsInterface.cpp  webotsInterface.txt
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/br/: GR1L.json
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/ch108IMU/include/: ch108IMU.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/ch108IMU/src/: ch108IMU.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/cmake/grpc/: common.cmake
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/analysis/taskspace/: KinematicChain.hpp  KinematicChainSegment.hpp  TaskSpace.hpp  TaskSpaceBoundingBox.hpp  TaskSpaceCell.hpp  TaskSpaceCellLogData.hpp  (+14 more)
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/control/: ForwardDeclarations.hpp  Signal.hpp  SignalBase.hpp  SignalLimits.hpp  Wrench.hpp  signal_helpers.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/core/: CycleTimer.hpp  EnumerableState.hpp  FixedStepArithmeticNumber.hpp  IntegerTimeTypes.hpp  Nameable.hpp  StatisticsEstimator.hpp  StopWatch.hpp  Time.hpp  VectorSpaceMapper.hpp  floats.hpp  math.hpp  string.hpp  type_traits.hpp  utils.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/geometry/: CGMaterial.hpp  CGMesh.hpp  CGMeshFactory.hpp  CGMeshTools.hpp  CylindricalCoordinates.hpp  DHParameters.hpp  Polygon2D.hpp  SphericalCoordinates.hpp  rotations.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/hwl/: BusDevice.hpp  BusDriver.hpp  BusDriverControl.hpp  BusVariableRegistryBase.hpp  ForwardDeclarations.hpp  bus_types.hpp  type_traits.hpp  variables.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/io/: compression.hpp  encoding.hpp  filesystem.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/memory/: CircularAccessor.hpp  CircularBuffer.hpp  MultiLevelGrid.hpp  MultiVector.hpp  SmartVector.hpp  ThreadSafeData.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/include/broccoli/parallel/: BackgroundWorker.hpp  SynchronizedWorker.hpp  SynchronizedWorkerPool.hpp  ThreadSafeContainer.hpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/example/src/: main.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/fsa-cpp-sdk/: CMakeLists.txt  README.md
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/fsa-cpp-sdk/example/: CMakeLists.txt
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/fsa-cpp-sdk/example/src/: func_maxspeed.cpp  func_vel_ff.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/fsa-cpp-sdk/include/: Fsa.h  FsaMutiMotor.h  FsaSocket.h  ThreadPool.h  realtime_loop.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/fsa-cpp-sdk/src/: Fsa.cpp  FsaJsonData.cpp  FsaMutiMotor.cpp  FsaSocket.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/joystick/include/: joystick.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/joystick/src/: joystick.cpp
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/vnIMU/include/: vnIMU.h
GR1-deploy/gr1-rl-deploy/controllers/GR1_lite_webots/vnIMU/src/: vnIMU.cpp
(+437 files in other folders)
